# future-prediction

./: README.md  setup.cfg
config/forecast/: efficientps_fpn.yml  pandeep.yml  pandeep_stgan.yml  pandeep_stgan_f2mf.yml
envs/: env_pytorch_1_7_1_cupy.yml  env_pytorch_1_8_cuda_11_1.yml
pretrained_models/perception/: panoptic_deeplab_R50_os16_cityscapes_1_4_ds.yaml  panoptic_deeplab_R50_os32_cityscapes.yaml  panoptic_deeplab_R50_os32_cityscapes_1_4_ds.yaml  panoptic_deeplab_R50_os8_cityscapes_1_4_ds.yaml
scripts/: README.md  train_forecast.py
src/futurepred/: __init__.py
src/futurepred/config/: __init__.py  config_node.py  forecast.py
src/futurepred/criterions/: __init__.py  discounted_loss.py  flow_loss.py  multi_task_loss.py  scale_invariant_depth.py  topk_cross_entropy.py
src/futurepred/datasets/: README.md  cityscapes.py  cityscapes_sequence.py  mapillary.py  sampler.py  transforms.py
src/futurepred/model/: future_predictor.py
src/futurepred/model/dynamics/: README.md  __init__.py  bfp_tcea.py  conv_3d.py  conv_gru.py  conv_lstm.py  conv_module.py  corr_fusion.py  flow_modules.py  res_conv_3d.py  s3d.py  tcea_fusion.py  temp_block.py  temp_non_local.py  temp_shift.py  temp_shift_ops.py
src/futurepred/model/perception/: __init__.py  aspp.py  decoder.py  efficient_ps.py  encoder.py  flow.py  perception.py
src/futurepred/model/prediction/: __init__.py  conv_gru.py  decoder.py  discriminator.py  distribution.py  fpn_decoder.py  generator.py  (+2 more)
src/futurepred/utils/: comm.py  logger.py  meters.py  metrics.py  misc.py  model.py  model_dict.py  training.py
(+1 files in other folders)
