[metadata]
# replace with your username:
name = future-prediction
version = 0.1
author = Chengxin Wang
author_email = w@hxdl.org
description = Recurrent future prediction with GANs for video scene understanding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cvcore/future-prediction
project_urls =
    Bug Tracker = https://github.com/cvcore/future-prediction/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages =
    futurepred
    futurepred.config
    futurepred.criterions
    futurepred.datasets
    futurepred.model
    futurepred.utils
python_requires = >=3.6
